--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                   <div class="card">
                     <img src="./assets/card1.jpg" height="300" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">MONTAÑA NEVADA</h5>
+                      <h5 class="card-title">PARQUE ANDINO JUNCAL</h5>
+                      <span style="color: gray; width: 100%; place-content: center;margin-top: -15px; padding-bottom: 5px;" class="row">Trekking</span>
                       <button class="btnCard btnCorto"><img src="./icons/geo-alt-fill.svg"/>Google Maps</button>
                       <p class="card-text">Recorrer montañas nevadas es lo máximo</p>
                       
@@ -64,7 +65,8 @@
                   <div class="card">
                     <img src="./assets/card2.JPG" height="300" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">ESCALAR MONTAÑA</h5>
+                      <h5 class="card-title">PARQUE RIO BLANCO</h5>
+                      <span style="color: gray; width: 100%; place-content: center;margin-top: -15px; padding-bottom: 5px;" class="row">Montañismo</span>
                       <button class="btnCard btnCorto"><img src="./icons/geo-alt-fill.svg"/>Google Maps</button>
                       <p class="card-text">Escalar montañas es lo máximo</p>
                     </div>
@@ -75,7 +77,8 @@
                   <div class="card">
                     <img src="./assets/card3.jpg" height="300" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">RECORRER CAMPO</h5>
+                      <h5 class="card-title">PARQUE ANDINO JUNCAL</h5>
+                      <span style="color: gray; width: 100%; place-content: center;margin-top: -15px; padding-bottom: 5px;" class="row">Senderismo</span>
                       <button class="btnCard btnCorto"><img src="./icons/geo-alt-fill.svg"/>Google Maps</button>
                       <p class="card-text">Recorrer campos es lo máximo</p>
                     </div>
@@ -89,10 +92,26 @@
       </div>
           <div class="infoOtrasSecciones">
                 <div class="titleOtrasSecciones">
-                    <h2>TENEMOS MÁS SECCIONES PARA OFRECERTE</h2>
+                    <h2>Navega a través del mapa turístico del Valle de Aconcagua</h2>
                 </div>
                 <div class="contentOtrasSecciones">
+                  <div class="imagen-hover">
+                    <img src="./assets/mapaValle.png" alt="Tu Imagen">
+                    <div class="overlay">
+                      <a href="https://www.google.com/maps/d/u/0/viewer?mid=1KBYqUdNmdqw58WKbdBJxrp2ham375Ow&hl=es&ll=-32.70775278193859%2C-70.5605157&z=10" target="_blank" class="boton">ABRIR EN GOOGLE MAPS</a>
+                    </div>
+                  </div>                
                 </div>
+               
+          </div>
+          <div class="footerContainer">
+              <div class="footerImg"> 
+                <img src="./assets/footerImg.png" width="150" alt="">
+              </div>
+              <div class="footerText">
+                <p>ACONCAGUA DE VIAJE</p>
+                <span>©2023 Bastián Perez</span>
+              </div>
           </div>
 </body>
 </html>
