--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aconcagua de viaje</title>
     <link rel="stylesheet" href="style.css">
+    <script src="scriptIndex.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
@@ -15,7 +16,7 @@
                 <img src="./assets/Aconcagua-removebg-preview.png" width="150" height="150" alt="logo-aconcagua-de-viaje" title="Logo Aconcagua de Viaje">
             </div>
             <div class="opcionesNavbar">
-                <a href="">Inicio</a>
+                <a href="./index.html">Inicio</a>
                 <div class="dropdown">
                 <button class="dropbtn"><a href="./servicios.html">Servicio</a></button>
                 <div class="dropdown-content">
@@ -25,7 +26,8 @@
                 </div>
               </div>
                 <a href="">¿Cuál es nuestro propósito?</a>
-            </div>
+                <a href="./opiniones.html">Opiniones</a>
+              </div>
         </div>
     </div>
 
@@ -110,8 +112,61 @@
               </div>
               <div class="footerText">
                 <p>ACONCAGUA DE VIAJE</p>
-                <span>©2023 Bastián Perez</span>
+                <span>©2023</span>
               </div>
           </div>
+          <!-- Flexbox container for aligning the toasts -->
+<div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center w-100">
+
+  <div class="toast align-items-center justify-content-end" style="position: fixed; bottom: 10px; right: 10px;" id="valoracionToast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header" style="background-color: #3498DB; color: white ;">
+        <strong class="me-auto">Queremos conocer tu opinión</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Cerrar"></button>
+    </div>
+    <div class="toast-body" style="display: grid; grid-template-columns: 40% 60%; max-width: 400px;">
+        <button type="button" class="btn btn-secondary btn-sm" style="background-color: #FFD700;margin-right: 5px; border: none;" data-bs-toggle="modal" data-bs-target="#modalValoracion">
+            Dar mi opinión
+        </button>
+         <button type="button" class="btn btn-secondary btn-sm" style="border: none;" data-bs-dismiss="toast">
+            No volver a mostrar
+         </button>
+    </div>
+</div>
+
+
+<!-- Modal de valoración -->
+<div class="modal fade" id="modalValoracion" tabindex="-1" aria-labelledby="modalValoracionLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: #3498DB;color: white; font-size: 16px;">
+                <h5 class="modal-title" id="modalValoracionLabel">Valoración</h5>
+                <button type="button" id="btnCerrarModalValoracion" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="mb-3">
+                    <label for="tipoFeedback" class="form-label">Categoría</label>
+                    <select class="form-select" id="tipoFeedback" required>
+                        <option value="" disabled selected>Selecciona una opción</option>
+                        <option value="Destino turístico">Destino turístico</option>
+                        <option value="Sitio web">Sitio web</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="comentario" class="form-label">Comentario:</label>
+                    <textarea id="comentario" class="form-control"></textarea>
+                </div>
+            </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary" style="background-color: #3498DB;color: white">Enviar valoración</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+</div>
+
 </body>
 </html>
