--- a/opiniones.html
+++ b/opiniones.html
@@ -30,8 +30,8 @@
               </div>
         </div>
     </div>
-    <div class="dobleColumna" style="padding-top: 100px;">
-        <div class="valoracionesContainer" id="valoracionesContainer">
+    <div class="dobleColumna" style="padding-top: 120px;">
+        <div class="valoracionesContainer" id="valoracionesContainer" style="margin-top: -15px;">
         </div>
 
         <div class="formularioValoracion">
