--- a/index.html
+++ b/index.html
@@ -168,5 +168,15 @@
 
 </div>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-01LTRWPSMM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-01LTRWPSMM');
+</script>
+
 </body>
 </html>
