--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>VIVE EXPERIENCIAS ASOMBROSAS</h1>
         <h2>VALLE DE</h2>
         <h3>ACONCAGUA</h3>
-        <span>Visitar el Valle del Aconcagua ofrece una oportunidad única para experimentar la naturaleza imponente, la cultura local y la emoción de aventuras en un entorno natural espectacular.</span>
+        <span>Ven a recorrer los diversos sitios naturales y culturales del valle, donde podrás conectar con lo esencial, respirar lo natural, viajar hacia la historia de los antepasados y sentir la emoción de la aventura y el montañismo.</span>
         <button>VER DESTINOS</button>
     </div>
 
