Cambio colores navbar y footer

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <div class="imagen-hover">
                     <img src="./assets/mapaValle.png" alt="Tu Imagen">
                     <div class="overlay">
-                      <a href="https://www.google.com/maps/d/u/0/viewer?mid=1KBYqUdNmdqw58WKbdBJxrp2ham375Ow&hl=es&ll=-32.70775278193859%2C-70.5605157&z=10" target="_blank" class="boton">ABRIR EN GOOGLE MAPS</a>
+                      <a href="https://www.google.com/maps/d/u/0/viewer?mid=1KBYqUdNmdqw58WKbdBJxrp2ham375Ow&hl=es&ll=-32.70775278193859%2C-70.5605157&z=10" target="_blank" class="btnNormal" style="text-decoration: none !important;">ABRIR EN GOOGLE MAPS</a>
                     </div>
                   </div>                
                 </div>
@@ -128,15 +128,15 @@
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center w-100">
 
   <div class="toast align-items-center justify-content-end" style="position: fixed; bottom: 10px; right: 10px;" id="valoracionToast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header" style="background-color: #3498DB; color: white ;">
+    <div class="toast-header" style="background-color: #3A8F9B; color: white ;">
         <strong class="me-auto">Queremos conocer tu opinión</strong>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Cerrar"></button>
     </div>
     <div class="toast-body" style="display: grid; grid-template-columns: 40% 60%; max-width: 400px;">
-        <button type="button" class="btn btn-secondary btn-sm" style="background-color: #FFD700;margin-right: 5px; border: none;" data-bs-toggle="modal" data-bs-target="#modalValoracion">
+        <button type="button" class="btn btn-secondary btn-sm" style="background-color: #F1CF0C;margin-right: 5px; border: none;" data-bs-toggle="modal" data-bs-target="#modalValoracion">
             Dar mi opinión
         </button>
-         <button type="button" class="btn btn-secondary btn-sm" style="border: none;" data-bs-dismiss="toast">
+         <button type="button" class="btn btn-secondary btn-sm" style="border: none; background-color: #333;" data-bs-dismiss="toast">
             No volver a mostrar
          </button>
     </div>
