Se añaden todas las paginas del sitio web

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <div class="opcionesNavbar">
                 <a href="./index.html">Inicio</a>
                 <div class="dropdown">
-                <button class="dropbtn"><a href="./servicios.html">Servicio</a></button>
-                <div class="dropdown-content">
+                  <button class="dropbtn"><a href="#">Servicio</a></button>
+                  <div class="dropdown-content">
                   <a href="./restaurantes.html">Restaurantes</a>
-                  <a href="#">Operadores turísticos</a>
-                  <a href="#">Hospedaje</a>
+                  <a href="./operadores-turisticos.html">Operadores turísticos</a>
+                  <a href="./hospedaje.html">Hospedaje</a>
                 </div>
               </div>
-                <a href="">¿Cuál es nuestro propósito?</a>
+                <a href="./proposito.html">¿Cuál es nuestro propósito?</a>
                 <a href="./opiniones.html">Opiniones</a>
               </div>
         </div>
