--- a/operadores-turisticos.html
+++ b/operadores-turisticos.html
@@ -24,7 +24,7 @@
                 <button class="dropbtn"><a href="#">Servicio</a></button>
                 <div class="dropdown-content">
                   <a href="#">Restaurantes</a>
-                  <a href="./operadores-turisticos.html">Operadores turísticos</a>
+                  <a href="#">Operadores turísticos</a>
                   <a href="./hospedaje.html">Hospedaje</a>
                 </div>
               </div>
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="container">
-        <h1>RESTAURANTES</h1>
+        <h1>OPERADORES TURISTICOS</h1>
     </div>
 </body>
 </html>
