--- a/proposito.html
+++ b/proposito.html
@@ -23,18 +23,18 @@
                 <div class="dropdown">
                 <button class="dropbtn"><a href="#">Servicio</a></button>
                 <div class="dropdown-content">
-                  <a href="#">Restaurantes</a>
+                  <a href="./restaurantes.html">Restaurantes</a>
                   <a href="./operadores-turisticos.html">Operadores turísticos</a>
                   <a href="./hospedaje.html">Hospedaje</a>
                 </div>
               </div>
-                <a href="./proposito.html">¿Cuál es nuestro propósito?</a>
+                <a href="#">¿Cuál es nuestro propósito?</a>
                 <a href="./opiniones.html">Opiniones</a>
               </div>
         </div>
     </div>
     <div class="container">
-        <h1>RESTAURANTES</h1>
+        <h1>CUAL ES NUESTRO PROPÓSITO</h1>
     </div>
 </body>
 </html>
