--- a/hospedaje.html
+++ b/hospedaje.html
@@ -25,7 +25,7 @@
                 <div class="dropdown-content">
                   <a href="#">Restaurantes</a>
                   <a href="./operadores-turisticos.html">Operadores turísticos</a>
-                  <a href="./hospedaje.html">Hospedaje</a>
+                  <a href="#">Hospedaje</a>
                 </div>
               </div>
                 <a href="./proposito.html">¿Cuál es nuestro propósito?</a>
@@ -33,8 +33,11 @@
               </div>
         </div>
     </div>
+    <div>
+    </div>
+
     <div class="container">
-        <h1>RESTAURANTES</h1>
+            <h1>HOSPEDAJE</h1>
     </div>
 </body>
 </html>
