Se corrigen rutas

--- a/hospedaje.html
+++ b/hospedaje.html
@@ -23,7 +23,7 @@
                 <div class="dropdown">
                 <button class="dropbtn"><a href="#">Servicio</a></button>
                 <div class="dropdown-content">
-                  <a href="#">Restaurantes</a>
+                  <a href="./restaurantes.html">Restaurantes</a>
                   <a href="./operadores-turisticos.html">Operadores turísticos</a>
                   <a href="#">Hospedaje</a>
                 </div>
