--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img src="./assets/Aconcagua-removebg-preview.png" width="150" height="150" alt="logo-aconcagua-de-viaje" title="Logo Aconcagua de Viaje">
             </div>
             <div class="opcionesNavbar">
-                <a href="./index.html">Inicio</a>
+                <a href="#">Inicio</a>
                 <div class="dropdown">
                   <button class="dropbtn"><a href="#">Servicio</a></button>
                   <div class="dropdown-content">
