--- a/operadores-turisticos.html
+++ b/operadores-turisticos.html
@@ -23,7 +23,7 @@
                 <div class="dropdown">
                 <button class="dropbtn"><a href="#">Servicio</a></button>
                 <div class="dropdown-content">
-                  <a href="#">Restaurantes</a>
+                  <a href="./restaurantes.html">Restaurantes</a>
                   <a href="#">Operadores turísticos</a>
                   <a href="./hospedaje.html">Hospedaje</a>
                 </div>
