--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
                
           </div>
-          <div class="footerContainer">
+          <div class="footerContainerIndexIndex">
               <div class="footerImg"> 
                 <img src="./assets/footerImg.png" width="150" alt="">
               </div>
