Se añaden cards en los demás apartados

--- a/hospedaje.html
+++ b/hospedaje.html
@@ -10,7 +10,77 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</head>
+    <style>
+      .bodyContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 80vh;
+        margin: 0;
+      }
+  
+      .card-container {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        margin-top: -100px;
+      }
+  
+      .card {
+        width: calc(33.33% - 20px); /* Asegura que hay espacio para tres tarjetas en una fila */
+        height: 200px;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+  
+      .card:hover {
+        opacity: 0.8;
+      }
+  
+      .card:hover .card-text {
+        opacity: 1;
+      }
+      .card:hover .card-textOn{
+          opacity: 0;
+      }
+  
+      .card-textOn{
+          position: absolute;
+          background-color: #3A8F9B;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          color: white;
+          padding: 10px;
+          box-sizing: border-box;
+          opacity: 1;
+          transition: 0.3s;
+      }
+      .card-text {
+        display: flex;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        color: white;
+        box-sizing: border-box;
+        padding: 10px;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.8);
+        opacity: 0;
+        border-radius: 5px;
+        justify-content: center;
+        align-items: center;
+        transition: opacity 0.3s ease;
+        margin-top: 0 !important;
+      }
+    </style>
+  </head>
 <body>
     <div class="navbar">
         <div class="navbarItems">
@@ -32,11 +102,91 @@
               </div>
         </div>
     </div>
-    <div>
-    </div>
-
     <div class="container">
-            <h1>HOSPEDAJE</h1>
-    </div>
+      <div class="headerContainer">
+          <h2>Hospedajes</h2>
+          <p>Encuentra tu hogar lejos de casa en nuestros alojamientos excepcionales.</p>
+          <p>Con un servicio impecable y comodidades pensadas para tu confort,</p>
+          <p>te invitamos a relajarte y disfrutar de una estancia inolvidable en nuestros espacios diseñados para tu</p>
+          <p>descanso y bienestar.</p>
+          
+      </div>
+      <div style="width: 95%; text-align: end;">
+          <button class="btnFilter" data-bs-toggle="modal" data-bs-target="#modalFiltro">Filtrar<img src="./icons/filter.svg" style="margin-left: 5px;" alt=""></button>
+      </div>
+      <div class="bodyContainer">
+          <div class="modal fade" id="modalFiltro" tabindex="-1" aria-labelledby="modalFiltroLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="modal-header" style="background-color: #3A8F9B;color: white; font-size: 16px;">
+                          <h5 class="modal-title" id="modalFiltroLabel">Filtro avanzado</h5>
+                          <button type="button" id="btnCerrarmodalFiltro" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                      </div>
+                      <div class="modal-body">
+                        <form>
+                          <div class="mb-3">
+                              <label for="tipoFeedback" class="form-label">Seleccione una comuna</label>
+                              <select class="form-select" id="tipoFeedback" required>
+                                  <option value="" disabled selected>Todas las comunas</option>
+                                  <option value="San Felipe">Los Andes</option>
+                                  <option value="San Felipe">San Felipe</option>
+                                  <option value="San Felipe">Putaendo</option>
+                                  <option value="San Felipe">Llay Llay</option>
+                                  <option value="San Felipe">Rinconada de los Andes</option>
+
+                              </select>
+                          </div>
+                          <div class="mb-3">
+                              <label for="tipoFeedback" class="form-label">Seleccione una actividad</label>
+                              <select class="form-select" id="tipoFeedback" required>
+                                  <option value="" disabled selected>Todas las actividades</option>
+                                  <option value="San Felipe">Montañismo</option>
+                                  <option value="San Felipe">Escalada</option>
+                                  <option value="San Felipe">Senderismo</option>
+                                  <option value="San Felipe">Cicloturismo</option>
+                              </select>
+                          </div>
+
+                      </form>
+                      </div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                          <button type="button" class="btn btn-primary" style="background-color: #3A8F9B;color: white" data-bs-dismiss="modal">Filtrar</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="card-container">
+              <div class="card" style="background-image: url('./assets/hotel-los-andes.jpg');">
+                <div class="card-text">Texto de la tarjeta 1</div>
+                <div class="card-textOn">HOTEL LOS ANDES - LOS ANDES</div>
+              </div>
+              <div class="card" style="background-image: url('./assets/hotel-el-real.jpg');">
+                <div class="card-text">Texto de la tarjeta 2</div>
+                <div class="card-textOn">HOTEL EL REAL - SAN FELIPE</div>
+              </div>
+              <div class="card" style="background-image: url('./assets/hotel-san-esteban.jpg');">
+                <div class="card-text">Texto de la tarjeta 3</div>
+                <div class="card-textOn">HOTEL SAN ESTEBAN - LOS ANDES</div>
+              </div>
+              <div class="card" style="background-image: url('./assets/inca-hotel-losandes.jpg');">
+                <div class="card-text">El Inca Hoteles se encuentra en Los Andes y ofrece piscina exterior de temporada. También alberga un bar restaurante. Se proporcionan servicios gratuitos, como aparcamiento privado y conexión WiFi en todas las instalaciones.</div>
+                <div class="card-textOn">INCA HOTEL - LOS ANDES</div>
+              </div>
+            </div>
+
+      </div>
+  </div>
+  <div class="footerContainerIndex">
+      <div class="footerImg"> 
+        <img src="./assets/footerImg.png" width="150" alt="">
+      </div>
+      <div class="footerText">
+        <p>ACONCAGUA DE VIAJE</p>
+        <span>©2023</span>
+      </div>
+  </div>
+ 
 </body>
 </html>
