Se añaden varios

--- a/hospedaje.html
+++ b/hospedaje.html
@@ -23,7 +23,7 @@
         width: 100%;
         display: flex;
         flex-wrap: wrap;
-        gap: 10px;
+        gap: 30px;
         margin-top: -100px;
       }
   
@@ -85,12 +85,14 @@
     <div class="navbar">
         <div class="navbarItems">
             <div class="logo">
+              <a href="./index.html">                
                 <img src="./assets/Aconcagua-removebg-preview.png" width="150" height="150" alt="logo-aconcagua-de-viaje" title="Logo Aconcagua de Viaje">
+              </a>            
             </div>
             <div class="opcionesNavbar">
                 <a href="./index.html">Inicio</a>
                 <div class="dropdown">
-                <button class="dropbtn"><a href="#">Servicio</a></button>
+                <button class="dropbtn"><a href="#">Servicios</a></button>
                 <div class="dropdown-content">
                   <a href="./restaurantes.html">Restaurantes</a>
                   <a href="./operadores-turisticos.html">Operadores turísticos</a>
@@ -106,12 +108,12 @@
       <div class="headerContainer">
           <h2>Hospedajes</h2>
           <p>Encuentra tu hogar lejos de casa en nuestros alojamientos excepcionales.</p>
-          <p>Con un servicio impecable y comodidades pensadas para tu confort,</p>
+          <p>Con un Servicios impecable y comodidades pensadas para tu confort,</p>
           <p>te invitamos a relajarte y disfrutar de una estancia inolvidable en nuestros espacios diseñados para tu</p>
           <p>descanso y bienestar.</p>
           
       </div>
-      <div style="width: 95%; text-align: end;">
+      <div style="width: 100%; text-align: end;">
           <button class="btnFilter" data-bs-toggle="modal" data-bs-target="#modalFiltro">Filtrar<img src="./icons/filter.svg" style="margin-left: 5px;" alt=""></button>
       </div>
       <div class="bodyContainer">
@@ -171,7 +173,7 @@
                 <div class="card-textOn">HOTEL SAN ESTEBAN - LOS ANDES</div>
               </div>
               <div class="card" style="background-image: url('./assets/inca-hotel-losandes.jpg');">
-                <div class="card-text">El Inca Hoteles se encuentra en Los Andes y ofrece piscina exterior de temporada. También alberga un bar restaurante. Se proporcionan servicios gratuitos, como aparcamiento privado y conexión WiFi en todas las instalaciones.</div>
+                <div class="card-text">El Inca Hoteles se encuentra en Los Andes y ofrece piscina exterior de temporada. También alberga un bar restaurante. Se proporcionan Servicioss gratuitos, como aparcamiento privado y conexión WiFi en todas las instalaciones.</div>
                 <div class="card-textOn">INCA HOTEL - LOS ANDES</div>
               </div>
             </div>
