--- a/proposito.html
+++ b/proposito.html
@@ -15,12 +15,14 @@
     <div class="navbar">
         <div class="navbarItems">
             <div class="logo">
-                <img src="./assets/Aconcagua-removebg-preview.png" width="150" height="150" alt="logo-aconcagua-de-viaje" title="Logo Aconcagua de Viaje">
-            </div>
+                <a href="./index.html">                
+                    <img src="./assets/Aconcagua-removebg-preview.png" width="150" height="150" alt="logo-aconcagua-de-viaje" title="Logo Aconcagua de Viaje">
+                </a>           
+             </div>
             <div class="opcionesNavbar">
                 <a href="./index.html">Inicio</a>
                 <div class="dropdown">
-                <button class="dropbtn"><a href="#">Servicio</a></button>
+                <button class="dropbtn"><a href="#">Servicios</a></button>
                 <div class="dropdown-content">
                   <a href="./restaurantes.html">Restaurantes</a>
                   <a href="./operadores-turisticos.html">Operadores turísticos</a>
