--- a/restaurantes.html
+++ b/restaurantes.html
@@ -23,7 +23,7 @@
           width: 100%;
           display: flex;
           flex-wrap: wrap;
-          gap: 10px;
+          gap: 30px;
           margin-top: -100px;
         }
     
@@ -84,12 +84,14 @@
     <div class="navbar">
         <div class="navbarItems">
             <div class="logo">
-                <img src="./assets/Aconcagua-removebg-preview.png" width="150" height="150" alt="logo-aconcagua-de-viaje" title="Logo Aconcagua de Viaje">
+                <a href="./index.html">                
+                    <img src="./assets/Aconcagua-removebg-preview.png" width="150" height="150" alt="logo-aconcagua-de-viaje" title="Logo Aconcagua de Viaje">
+                </a>            
             </div>
             <div class="opcionesNavbar">
                 <a href="./index.html">Inicio</a>
                 <div class="dropdown">
-                <button class="dropbtn"><a href="#">Servicio</a></button>
+                <button class="dropbtn"><a href="#">Servicios</a></button>
                 <div class="dropdown-content">
                   <a href="#">Restaurantes</a>
                   <a href="./operadores-turisticos.html">Operadores turísticos</a>
@@ -109,7 +111,7 @@
             <p>cada restaurante ofrece una fusión única de sabores que deleitará tu paladar.</p>
             
         </div>
-        <div style="width: 95%; text-align: end;">
+        <div style="width: 100%; text-align: end;">
             <button class="btnFilter" data-bs-toggle="modal" data-bs-target="#modalFiltro">Filtrar<img src="./icons/filter.svg" style="margin-left: 5px;" alt=""></button>
         </div>
         <div class="bodyContainer">
