Se agrega patrocinador al footer

--- a/hospedaje.html
+++ b/hospedaje.html
@@ -138,16 +138,7 @@
 
                               </select>
                           </div>
-                          <div class="mb-3">
-                              <label for="tipoFeedback" class="form-label">Seleccione una actividad</label>
-                              <select class="form-select" id="tipoFeedback" required>
-                                  <option value="" disabled selected>Todas las actividades</option>
-                                  <option value="San Felipe">Montañismo</option>
-                                  <option value="San Felipe">Escalada</option>
-                                  <option value="San Felipe">Senderismo</option>
-                                  <option value="San Felipe">Cicloturismo</option>
-                              </select>
-                          </div>
+                          
 
                       </form>
                       </div>
@@ -181,14 +172,15 @@
       </div>
   </div>
   <div class="footerContainerIndex">
-      <div class="footerImg"> 
-        <img src="./assets/footerImg.png" width="150" alt="">
-      </div>
-      <div class="footerText">
-        <p>ACONCAGUA DE VIAJE</p>
-        <span>©2023</span>
-      </div>
-  </div>
+    <div class="footerImg"> 
+      <img src="./assets/footerImg.png" width="150" alt="">
+      <img src="./assets/ojos_de_agua_chile.png" width="180" alt="">
+    </div>
+    <div class="footerText">
+      <p>ACONCAGUA DE VIAJE <span>©2023</span></p>
+      <span>B. Pérez | V. Pizarro</span>
+    </div>
+</div>
  
 </body>
 </html>
