--- a/opiniones.html
+++ b/opiniones.html
@@ -42,6 +42,15 @@
         </div>
 
       </div>
-      
+      <div class="footerContainerIndex">
+        <div class="footerImg"> 
+          <img src="./assets/footerImg.png" width="150" alt="">
+          <img src="./assets/ojos_de_agua_chile.png" width="180" alt="">
+        </div>
+        <div class="footerText">
+          <p>ACONCAGUA DE VIAJE <span>©2023</span></p>
+          <span>B. Pérez | V. Pizarro</span>
+        </div>
+    </div>
 </body>
 </html>
