--- a/proposito.html
+++ b/proposito.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <style>
+        .container{
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
     <div class="navbar">
@@ -36,6 +41,16 @@
     </div>
     <div class="container">
         <h1>CUAL ES NUESTRO PROPÓSITO</h1>
+    </div>
+    <div class="footerContainerIndex">
+        <div class="footerImg"> 
+          <img src="./assets/footerImg.png" width="150" alt="">
+          <img src="./assets/ojos_de_agua_chile.png" width="180" alt="">
+        </div>
+        <div class="footerText">
+          <p>ACONCAGUA DE VIAJE <span>©2023</span></p>
+          <span>B. Pérez | V. Pizarro</span>
+        </div>
     </div>
 </body>
 </html>
