--- a/tourVirtual.html
+++ b/tourVirtual.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
     <style>
         .bodyVR{
             padding-top: 100px;
@@ -16,9 +16,6 @@
             padding: 50px;
             width: 100%;
             height: 70vh;
-        }
-        .a-enter-vr-button{
-            top: -50px !important;
         }
     </style>
 </head>
@@ -45,14 +42,18 @@
         </div>
     </div>
     <div class="bodyVR">
-        <a-scene>
-            <!-- Agregar una imagen -->
-            <a-image src="./assets/laruca360.jpg" position="0 1 -3" scale="2 2 2"></a-image>
-        
-            <!-- Otros elementos en la escena (puedes agregar más según tus necesidades) -->
-            <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-          </a-scene>
+        <div id='vrview'></div>
     </div>
+    <script>
+       window.addEventListener('load', onVrViewLoad);
 
+        function onVrViewLoad() {
+        // Selector '#vrview' finds element with id 'vrview'.
+        var vrView = new VRView.Player('#vrview', {
+            image: './assets/laruca30.jpg',
+            is_stereo: true
+        });
+        }
+      </script>
 </body>
 </html>
