Se agrande visor

--- a/tourVirtual.html
+++ b/tourVirtual.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="bodyVR">
-        <div id='vrview'></div>
+        <div id='vrview' style="width: 800px; height: 400px;"></div>
     </div>
     <script>
        window.addEventListener('load', onVrViewLoad);
