--- a/tourVirtual.html
+++ b/tourVirtual.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="bodyVR">
-        <div id='vrview' style="width: 800px; height: 400px;"></div>
+        <div id="vrview" style="transform: translate(50%,40%)" ></div>
     </div>
     <script>
        window.addEventListener('load', onVrViewLoad);
@@ -50,6 +50,8 @@
         function onVrViewLoad() {
         // Selector '#vrview' finds element with id 'vrview'.
         var vrView = new VRView.Player('#vrview', {
+            width: 800,
+            height: 400,
             image: './assets/laruca360.jpg',
             is_stereo: true
         });
