Actualización de perfiles equipo

--- a/proposito.html
+++ b/proposito.html
@@ -68,11 +68,11 @@
             <div style="display: flex;justify-content: center; text-align: center;">
                 
                 <div class="divImgCircular">
-                    <img src="./assets/perfil1.jpg" alt="" class="imgCircular">
+                    <img src="./assets/profile1.JPG" alt="" class="imgCircular">
                     <p>Bastián Pérez</p>
                 </div>
                 <div class="divImgCircular">
-                    <img src="./assets/perfil1.jpg" alt="" class="imgCircular">
+                    <img src="./assets/profile2.jpg" alt="" class="imgCircular">
                     <p>Valeria Pizarro</p>
                 </div>
             </div>
