Se añaden valoraciones en página opiniones

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" style="background-color: #3A8F9B;color: white">Enviar valoración</button>
+                <button type="button" class="btn btn-primary" style="background-color: #3A8F9B;color: white;border: none">Enviar valoración</button>
             </div>
         </div>
     </div>
